--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.3",
     "emailjs-com": "^3.2.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
+    "primereact": "^10.6.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
